removed current and last links
